unpackaged/main/default/objects/TNP_AddressMap__c/TNP_AddressMap__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TNP_AddressMap</label>
</CustomObject>