unpackaged/main/default/objects/TNP_AddressMap__c/fields/PersonMailingCity__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingCity__c</fullName>
    <label>Address1_City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>