unpackaged/main/default/objects/TNP_AddressMap__c/fields/PersonMailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingPostalCode__c</fullName>
    <label>Address1_Zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>