unpackaged/main/default/objects/TNP_AddressMap__c/fields/PersonMailingState__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingState__c</fullName>
    <label>Address1_State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>