unpackaged/main/default/objects/TNP_AddressMap__c/fields/PersonMailingStreet__c.field-meta.xml
<CustomField>
    <fullName>PersonMailingStreet__c</fullName>
    <label>Address1_Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>