unpackaged/main/default/objects/TNP_AddressMap__c/fields/PersonOtherCity__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherCity__c</fullName>
    <label>Address2_City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>