unpackaged/main/default/objects/TNP_AddressMap__c/fields/PersonOtherPostalCode__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherPostalCode__c</fullName>
    <label>Address2_Zipcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>