unpackaged/main/default/objects/TNP_AddressMap__c/fields/PersonOtherState__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherState__c</fullName>
    <label>Address2_State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>