unpackaged/main/default/objects/TNP_AddressMap__c/fields/PersonOtherStreet__c.field-meta.xml
<CustomField>
    <fullName>PersonOtherStreet__c</fullName>
    <label>Address2_Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>